test/files/invalid/bad_vector_types.fbs
table Foo {
  x: [Bar];
  y: [[Foo: 1]];
}

union Bar {}